# ChangeLog for net-analyzer/bwmon
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/bwmon/ChangeLog,v 1.15 2009/06/02 11:43:08 flameeyes Exp $

  02 Jun 2009; Diego E. Pettenò <flameeyes@gentoo.org> bwmon-1.3.ebuild:
  Fix build by just not using the broken Makefile, instead build straight in
  src_compile. Also fix DEPEND/RDEPEND and die on failed install. Closes bug
  #247924.

  02 Jul 2007; Piotr Jaroszyński <peper@gentoo.org> bwmon-1.3.ebuild:
  (QA) RESTRICT clean up.

  19 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Redigest for Manifest2

  07 Mar 2006; Jeroen Roovers <jer@gentoo.org> bwmon-1.3.ebuild:
  Stable on hppa (bug #109186).

  29 Nov 2005; Jeroen Roovers <jer@gentoo.org> bwmon-1.3.ebuild:
  Marked ~hppa wrt bug 109186.

  19 Jul 2005; David Holm <dholm@gentoo.org> bwmon-1.3.ebuild:
  Added to ~ppc.

  26 Jun 2005; Marcelo Goes <vanquirius@gentoo.org> bwmon-1.3.ebuild:
  amd64 stable.

  03 May 2005; Herbie Hopkins <herbs@gentoo.org> bwmon-1.3.ebuild:
  Marked ~amd64 wrt bug #91331.

  08 Jul 2004; Eldad Zack <eldad@gentoo.org> bwmon-1.3.ebuild:
  added metadata

  08 Jul 2004; Eldad Zack <eldad@gentoo.org> bwmon-1.3.ebuild:
  Tidy

  25 Nov 2003; Martin Holzer <mholzer@gentoo.org> bwmon-1.3.ebuild:
  adding RESTRICT="nomirror"

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*bwmon-1.3 (15 Jun 2002)

  15 Jun 2002; Brandon Low <lostlogic@gentoo.org> bwmon-1.3.ebuild: 

  Initial package.  This is a tiny little bandwidth monitor program,
  uses an ncurses interface and I find it very convenient.