@@ -1,4 +1,14 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST bwmon-1.3.tar.gz 5668 RMD160 375829dd60f4425ed90e244b715e426939df0618 SHA1 3fe85d05c6511f8f7f4a4e49bf33e3de9d6199f8 SHA256 624381208d0faae6c123bc6198a59d6c4316cd4fffb1ba5aca206374f5a42df6
-EBUILD bwmon-1.3.ebuild 819 RMD160 d4ef9555daa938bce75fc0129068ce465078cae8 SHA1 8fbfcbb53074fe3f235ec130eec8f1c3e1b1c5e1 SHA256 6d8409641166b1abb431d4843812a1def44013a6472c046fdba9d86612e9478c
-MISC ChangeLog 1655 RMD160 8846e8c919a0114958588a9feae635bc4e354aaa SHA1 cddf47cd881cb20153b62ae426e1fafa44a80b3e SHA256 e7fbc4087780f5e88e77ebdd94b585e3b89ad53f5ff618751c2863f2f35a42ae
+EBUILD bwmon-1.3.ebuild 812 RMD160 20953913e436567fbf91d71c287b206dd1386236 SHA1 cfb9bde4659606a3aa33928a067946b93db3e8ef SHA256 166b725d19ec8977387e63fdec06b7f69a790ef045267e0642c8087ad7e35d95
+MISC ChangeLog 1762 RMD160 1a26cbd94069790cb602eb36578e99efc6f4a0b2 SHA1 7d177ef36e82cb1c63244899dd4acfd97bfa8b08 SHA256 9cb2e146b07cbb0f0e5715650931383cc41e7d86800119b6e7845081f56b2b90
 MISC metadata.xml 227 RMD160 da09415985a20658beb1b579b7505189e6fb89fe SHA1 b436bcafc08dbd5c5be1bd49b5947387d98e55e8 SHA256 465609212401299513731252063d93eb272a2b61f65e3db84a6d38d229040d85
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iEYEARECAAYFAk7qHV4ACgkQVWmRsqeSphPNqQCeKR2yiSBhw4UIly3ZRIS1OXXM
+ussAnjyfnf01TGfDXg8CR+9gK5CcqCaY
+=acFQ
+-----END PGP SIGNATURE-----
