@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/bwmon
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/bwmon/ChangeLog,v 1.15 2009/06/02 11:43:08 flameeyes Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/bwmon/ChangeLog,v 1.16 2011/12/15 16:16:19 jer Exp $
+
+  15 Dec 2011; Jeroen Roovers <jer@gentoo.org> bwmon-1.3.ebuild:
+  Build fix by Andrew Savchenko (bug #394827).
 
   02 Jun 2009; Diego E. Pettenò <flameeyes@gentoo.org> bwmon-1.3.ebuild:
   Fix build by just not using the broken Makefile, instead build straight in
